fix styling on safari

--- a/src/MapInfo.css
+++ b/src/MapInfo.css
@@ -1,7 +1,7 @@
 /* For screens smaller than 600px */
 @media (max-width: 600px) {
  .static-map {
-   width: 100%;
-   height: 400px;
+    width: 100% !important;
+    height: 100% !important;
  }
 }
